--- a/style1.css
+++ b/style1.css
@@ -1,3 +1,4 @@
+
 body{
     margin: 0;
     padding: 0;
@@ -18,9 +19,11 @@ margin-top: 10px;
 background-color: rgba(0,0,0,0.5);
 box-shadow: inset -5px -5px rgba(0,0,0,0.5) ;
 border-radius: 25px;
-width: 450px;
+width: 400px;
 height: min-content;
-
+top: 350px;
+left: 15%;
+position: relative;
 transform: translate(-50%,-50%);
 box-sizing: border-box;
 padding: 50px 30px;
@@ -33,12 +36,12 @@ font-size: 2rem;
 margin: 20px;
 }
 .box{
-    padding: 5px;
-    margin: 10px;
+    padding: 12px;
+    margin: 20px;
     width: 65%;
     border: none;
     outline: none;
-    border-radius: 10px;
+    border-radius: 20px;
     background-color: rgba(0,0,0,0.5);
     box-shadow: inset -3px -3px rgba(0,0,0,0.5);
     font-size: 1rem;
@@ -73,7 +76,7 @@ font-size: 1rem;
     left: calc(50% - 50px);
 }
 #register{
-padding: 10px 20px;
+padding: 10px 10px;
 margin-top: 10px;
 width: 50%;
 background-color: rgba(0,0,0,0.5);
@@ -108,74 +111,13 @@ font-size: 1rem;
     color: white;
     opacity: 0.7;
  }
+
  #a{
 top: 500px;
-left: 20%;
+left: 15%;
 position: relative;
  }
  #box{
-    padding: 12px;
-    margin: 20px;
+    padding: 5px;
+    margin: 10px;
  }
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
